--- a/public/main.css
+++ b/public/main.css
@@ -75,6 +75,7 @@ a {
   display: flex;
   gap: 30px;
   align-items: center;
+  text-align: justify;
 }
 .destination-details img {
   border-radius: 4px;
