Chapter 2 - Lesson 19 - Nested Routes

--- a/public/main.css
+++ b/public/main.css
@@ -124,6 +124,10 @@ a {
   margin: 10px;
 }
 
+.experience__description {
+  text-align: justify;
+}
+
 /*Modal Overlay*/
 .modal-overlay:before {
   content: "";
